[package]
name = "senjuko-conch"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "senjuko-conch"
path = "main.rs"

[lib]
name = "conch"

[[bin]]
name = "conch-tool"
path = "tool/main.rs"

[workspace]
members = [
    "src/network/protocol/jce/frame",
]

[dependencies]
jce = { path = "src/network/protocol/jce/frame", package = "cookie-jce" }
anyhow = "1.0.68"
async-graphql = "5.0.6"
async-graphql-axum = "5.0.6"
axum = "0.6.9"
axum-extra = { version = "0.5.0", features = ["spa"] }
axum-server = { version = "0.4.4", features = ["tls-rustls"] }
bytes = "1.3.0"
clap = { version = "4.1", features = ["derive", "cargo", "wrap_help", "env"] }
jsonwebtoken = "8.2.0"
md5 = "0.7.0"
once_cell = "1.17.1"
prost = "0.11.6"
rand = "0.8.5"
reqwest = { version = "0.11.14", features = ["json", "rustls-tls-manual-roots"], default-features = false }
rmp-serde = "1.1.1"
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.35"
time = { version = "0.3.19", features = ["formatting", "local-offset"] }
tokio = { version = "1.25.0", features = ["full"] }
toml = "0.7.2"
tower-http = { version = "0.4.0", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
trust-dns-resolver = "0.22.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng"] }

[build-dependencies]
prost-build = "0.11.6"
