[package]
name = "senjuko-conch"
version = "0.1.0"
edition = "2021"
rust-version = "1.67"
build = "build.rs"

[[bin]]
name = "conch-tool"
path = "tool/main.rs"

[workspace]
members = [
    "src/network/protocol/jce/frame",
]

[dependencies]
jce = { path = "src/network/protocol/jce/frame", package = "cookie-jce" }
anyhow = "1.0.75"
async-graphql = "6.0.7"
async-graphql-axum = "5.0.10"
axum = "0.6.20"
axum-extra = { version = "0.6.0", features = ["spa"] }
axum-server = { version = "0.5.1", features = ["tls-rustls"] }
bytes = "1.5.0"
clap = { version = "4.4", features = ["derive", "cargo", "wrap_help", "env"] }
jsonwebtoken = "8.3.0"
md5 = "0.7.0"
once_cell = "1.18.0"
prost = "0.12.1"
rand = "0.8.5"
reqwest = { version = "0.11.20", features = ["json", "rustls-tls-manual-roots"], default-features = false }
rmp-serde = "1.1.2"
serde = { version = "1.0.168", features = ["derive"] }
thiserror = "1.0.48"
time = { version = "0.3.28", features = ["formatting", "local-offset"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.7.7"
tower-http = { version = "0.4.4", features = ["fs"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
trust-dns-resolver = "0.22.0"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }

[build-dependencies]
prost-build = "0.11.9"
