[package]
name = "conch-cookie"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jce = { path = "network/protocol/jce/frame", package = "cookie-jce" }
anyhow = "1.0.65"
bytes = "1.2.1"
chrono = "0.4.22"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
thiserror = "1.0.35"
tokio = { version = "1.21.2", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.36"
trust-dns-resolver = "0.22.0"
