[package]
name = "conch-cookie"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jce = { path = "network/protocol/jce/frame", package = "cookie-jce" }
anyhow = "1.0.66"
bytes = "1.3.0"
time = "0.3.17"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls-manual-roots"], default-features = false }
serde = { version = "1.0.150", features = ["derive"] }
thiserror = "1.0.35"
tokio = { version = "1.23.0", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.37"
trust-dns-resolver = "0.22.0"
