[package]
name = "conch-cookie"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jce = { path = "network/protocol/jce/frame", package = "cookie-jce" }
anyhow = "1.0.68"
bytes = "1.3.0"
md5 = "0.7.0"
reqwest = { version = "0.11.13", features = ["json", "rustls-tls-manual-roots"], default-features = false }
serde = { version = "1.0.151", features = ["derive"] }
thiserror = "1.0.35"
time = "0.3.17"
tokio = { version = "1.24.1", features = ["full"] }
toml = "0.5.11"
tracing = "0.1.37"
trust-dns-resolver = "0.22.0"
