[package]
name = "conch-cookie"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jce = { path = "network/protocol/jce/frame", package = "cookie-jce" }
macaron = { path = "../macaron", package = "conch-macaron" }
anyhow = "1.0.64"
bytes = "1.2.1"
chrono = "0.4.22"
reqwest = "0.11.11"
thiserror = "1.0.34"
tokio = { version = "1.21.1", features = ["full"] }
tracing = "0.1.36"
trust-dns-resolver = "0.22.0"
