[package]
name = "conch-macaron"
version = "0.1.0"
edition = "2021"

[lib]
path = "lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"
tracing = "0.1.36"
